# nanospeech

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy_hf_demo.yml
demo/: app.py  packages.txt  requirements.txt
examples/: train_duration.py  train_nanospeech.py
nanospeech/: generate.py  nanospeech_mlx.py  nanospeech_torch.py  trainer_torch.py  utils.py
nanospeech/voices/: celeste.txt  luna.txt  nash.txt  orion.txt  rhea.txt
